--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-"N": 10,
-"dt": 0.01,
+"N": 200,
+"dt": 0.05,
 "repulsion_radius": 0.2,
 "repulsion_intensity": -1,
 "noise_intensity": 0.1,	
 "des_v": 1,
 "doors":{
-	"door_1": [1.5,0,0.5,0]
+	"door_1": [1.5,0,0.5,0],
+	"door_2": [1.5,3,0.5,0]
        },
 "relaxation": 0.5,
 "room_length": 3,
