--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"N": 50,
+"N": 100,
 "dt": 0.05,
 "repulsion_radius": 0.2,
 "repulsion_intensity": -1,
@@ -7,12 +7,13 @@
 "des_v": 1,
 "doors":{
 	"door_1": [1.5,0,0.5,0],
-	"door_2": [1.5,3,0.5,0]
+	"door_2": [1.5,3,0.5,0],
+	"door_3": [3.5,3,0.5,0]
        },
 "relaxation": 0.5,
-"room_length": 5,
+"room_length": 6,
 "room_height": 3,
-"Nx": 50,
+"Nx": 60,
 "Ny": 30,
-"sigma": 0.25
+"sigma": 0.3
 }
