--- a/config.json
+++ b/config.json
@@ -2,18 +2,27 @@
 "N": 100,
 "dt": 0.05,
 "repulsion_radius": 0.2,
-"repulsion_intensity": -1,
+"repulsion_intensity": -0.5,
 "noise_intensity": 0.1,	
 "des_v": 1,
 "doors":{
-	"door_1": [1.5,0,0.5,0],
-	"door_2": [1.5,3,0.5,0],
-	"door_3": [3.5,3,0.5,0]
-       },
+	"door_1": [1.5 , 0 , 0.5 , 0 , 0.1],
+	"door_2": [1.5 , 3 , 0.5 , 0 , 0.5],
+	"door_3": [0 , 1.5, 0 , 0.5 , 1]
+        },
 "relaxation": 0.5,
-"room_length": 6,
+"room_length": 3,
 "room_height": 3,
-"Nx": 60,
-"Ny": 30,
-"sigma": 0.3
+"Nx": 40,
+"Ny": 40,
+"sigma_convolution": 0.3,
+"hjb_params":{
+    "g": 0,
+    "sigma": 2,
+    "mu": 1,
+    "alpha": 0,
+    "gamma": 0,
+    "wall_cost": 0
+        }
 }
+
