HJB equation is now solved using Neumann's bc

--- a/config.json
+++ b/config.json
@@ -1,28 +1,27 @@
 {
-"N": 100,
-"dt": 0.05,
+"N": 200,
+"dt": 0.01,
 "repulsion_radius": 0.2,
 "repulsion_intensity": -0.5,
-"noise_intensity": 0.1,	
+"noise_intensity": 0.05,	
 "des_v": 1,
 "doors":{
-	"door_1": [1.5 , 0 , 0.5 , 0 , 0.1],
-	"door_2": [1.5 , 3 , 0.5 , 0 , 0.5],
-	"door_3": [0 , 1.5, 0 , 0.5 , 1]
-        },
-"relaxation": 0.5,
+	"door_1": [1.5 , 0 , 0.5 , 0 ,0.5]
+    	},
+"initial_box": [0.2,2.8,0.2,2.8],
+"relaxation": 0.3,
 "room_length": 3,
 "room_height": 3,
-"Nx": 40,
-"Ny": 40,
-"sigma_convolution": 0.3,
+"Nx": 30,
+"Ny": 30,
+"sigma_convolution": 0.1,
 "hjb_params":{
-    "g": 0,
-    "sigma": 2,
-    "mu": 1,
+    "g": -0.5,
+    "sigma": 0.5,
+    "mu": 0.5,
     "alpha": 0,
-    "gamma": 0,
-    "wall_cost": 0
+    "gamma": 1,
+    "wall_cost": 0.1
         }
 }
 
