--- a/config.json
+++ b/config.json
@@ -1,27 +1,35 @@
 {
-"N": 200,
+"N": 100,
 "dt": 0.01,
+"room_length": 6,
+"room_height": 5,
+"Nx": 150,
+"Ny": 150,
+"doors":{
+	"door_1": [3.5, 5, 0.5 , 0 ,1]
+    	},
+"walls":{
+	"wall_1": [1.5,4, 4,0.5,0,1],
+   "wall_2": [4.5,4, 4,0.5,0,0]
+},
+"cylinders":{
+    "cylinder_1": [1.5,3,0.3]
+
+},
+"initial_box": [0.2,5.8,0.2,2],
 "repulsion_radius": 0.2,
-"repulsion_intensity": -0.5,
+"repulsion_intensity": -1,
 "noise_intensity": 0.05,	
 "des_v": 1,
-"doors":{
-	"door_1": [1.5 , 0 , 0.5 , 0 ,0.5]
-    	},
-"initial_box": [0.2,2.8,0.2,2.8],
-"relaxation": 0.3,
-"room_length": 3,
-"room_height": 3,
-"Nx": 30,
-"Ny": 30,
+"relaxation": 0.1,
 "sigma_convolution": 0.1,
 "hjb_params":{
-    "g": -0.5,
+    "g": -0.05,
     "sigma": 0.5,
     "mu": 0.5,
     "alpha": 0,
-    "gamma": 1,
-    "wall_cost": 0.1
-        }
+    "gamma": 0,
+    "potential": -100
+}
 }
 
