--- a/config.json
+++ b/config.json
@@ -1,34 +1,44 @@
 {
-"N": 100,
+"N": 50,
 "dt": 0.01,
-"room_length": 6,
+"room_length": 10,
 "room_height": 5,
-"Nx": 150,
-"Ny": 150,
-"doors":{
-	"door_1": [3.5, 5, 0.5 , 0 ,1]
-    	},
-"walls":{
-	"wall_1": [1.5,4, 4,0.5,0,1],
-   "wall_2": [4.5,4, 4,0.5,0,0]
-},
-"cylinders":{
-    "cylinder_1": [1.5,3,0.3]
+"Nx": 60,
+"Ny": 30,
 
+"doors":{
+	"door_1": [1.5, 5, 0.5, 0 ,1]
+    },
+
+"walls":{
+	"wall_1": [5,4, 6.5,0.5],
+	"wall_2": [2,2,0.5,4.5],
+	"wall_3": [8,2,0.5,4.5]
+	
+    },
+    
+"holes":{
+    "hole_1":[5,4,1,0.5],
+    "hole_2":[2,2,0.5,1]
 },
-"initial_box": [0.2,5.8,0.2,2],
-"repulsion_radius": 0.2,
+
+"cylinders":{
+    
+    },
+
+"initial_box": [3,7,0.5,3],
+
+"repulsion_radius": 0.3,
 "repulsion_intensity": -1,
 "noise_intensity": 0.05,	
 "des_v": 1,
 "relaxation": 0.1,
 "sigma_convolution": 0.1,
+
 "hjb_params":{
-    "g": -0.05,
+    "g": -0.1,
     "sigma": 0.5,
     "mu": 0.5,
-    "alpha": 0,
-    "gamma": 0,
     "potential": -100
 }
 }
