--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
+
 "N": 50,
-"dt": 0.01,
+"dt": 1,
 "room_length": 10,
 "room_height": 5,
 "Nx": 60,
@@ -39,7 +40,8 @@
     "g": -0.1,
     "sigma": 0.5,
     "mu": 0.5,
-    "potential": -100
+    "potential": -200,
+    "initial_density": 1
 }
 }
 
