The door actractivity is now set in the config file, until I figure out the good value

--- a/config.json
+++ b/config.json
@@ -13,7 +13,8 @@
     "g": -0.005,
     "sigma": 0.5,
     "mu": 3,
-    "potential": -100
+    "wall_potential": -100,
+    "door_potential": 1
 }
 }
 
